syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.jobservice.grpc";
option csharp_namespace = "Server.Grpc";

// A service operating on JobApplication resources.
service JobApplicationService {
  // A method to create a job application resource.
  rpc CreateJobApplication(CreateJobApplicationRequest) returns (JobApplicationProto);
  // A method to get a list of job applications.
  rpc ListJobApplications(ListJobApplicationsRequest) returns (ListJobApplicationsResponse);
  rpc GetJobApplication(GetJobApplicationRequest) returns (JobApplicationProto);
  rpc UpdateJobApplication(UpdateJobApplicationRequest) returns (JobApplicationProto);
}

// A representation of a JobApplication.
message JobApplicationProto {
  // The job application identifier.
  optional int64 id = 1;
  // The status of the job application one of InProgress, Approved, Declined.
  optional string status = 4;
  // The date when the application was submitted.
  optional string applicationDate = 5;
  // The job id this job application is for.
  int64 jobId = 3;
  // The job seeker id that submitted the job application.
  int64 jobSeekerId = 2;
}

// A request to be sent when calling the CreateJobApplication method.
message CreateJobApplicationRequest {
  // The JobApplication to create.
  JobApplicationProto jobApplication = 1;
}

message GetJobApplicationRequest {
  int64 id = 1;
}

message UpdateJobApplicationRequest {
  JobApplicationProto jobApplication = 1;
}

// A request to be sent when calling the `ListJobApplications` method.
message ListJobApplicationsRequest {
  // A query to filter job applications by.
  optional string filter = 1;
  
  // The maximum number of job applications to return. The service may return fewer than this value.
  // If unspecified, at most 12 job applications will be returned.
  // The maximum value is 64; values above 64 will be coerced to 64.
  optional int32 page_size = 2;

  // A page token, received from a previous `ListJobApplications` call.
  // Provide this to retrieve the subsequent page.
  // If the number is invalid or not provided it will default to 0.
  optional string page_token = 3;
}

// A response received when calling the `ListJobApplications` method.
message ListJobApplicationsResponse {
  // The list of job applications
  repeated JobApplicationProto jobApplications = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;

  // The total number of items in the collection
  int32 total_size = 3;
}
